--- a/hw2/Makefile
+++ b/hw2/Makefile
@@ -15,7 +15,7 @@ IMAGE_LIB_OBJ=$(notdir $(patsubst %.cpp,%.o,$(IMAGE_LIB_SRC)))
 HEADER=$(HW1_HEADER) $(LIB_CODE_HEADER) $(IMAGE_LIB_HEADER)
 CXX_OBJ=$(HW1_OBJ) $(LIB_CODE_OBJ) $(IMAGE_LIB_OBJ)
 
-CXX=g++
+CXX=g++ -std=c++11
 TARGET=hw2
 CXXFLAGS=-DGLM_FORCE_RADIANS
 OPT=-O3
